another attempt at the ios menu not showing https://github.com/twbs/bootstrap/issues/7968

--- a/themes/pelican-elegant/static/css/style.css
+++ b/themes/pelican-elegant/static/css/style.css
@@ -395,3 +395,7 @@ dt:hover > a.headerlink {
     visibility: visible;
     text-decoration:none;
 }
+
+.dropdown-backdrop {
+    position: static;
+}
